--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,7 @@
 <!-- start custom head snippets -->
 <link rel="shortcut icon" href="/assets/imgs/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/imgs/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/imgs/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/imgs/favicon-16x16.png">
-<link rel="manifest" href="/assets/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/imgs/apple-touch-icon.png" | relative_url }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/imgs/favicon-32x32.png" | relative_url }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/imgs/favicon-16x16.png" | relative_url }}">
+<link rel="manifest" href="{{ "/assets/site.webmanifest" | relative_url }}">
 <!-- end custom head snippets -->
