ProSA abbr und text-decorattion bei abbr für print/PDF auf none.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,11 @@ hr.bottom {
 }
 
 @media print {
+  .markdown-body {
+    abbr[title] {
+      text-decoration: none;
+    }
+  }
   .page-break-after {
     page-break-after: always;
   }
